# cmake_stuff

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/stm32/: h7.cmake
codec2/: version.h
scripts/: build.sh  clean_build.sh
src/: main.c  stm32h7xx_hal_conf.h
